--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.2.5
+  email_validator: ^1.0.4
+  states_rebuilder: ^1.12.1
+  google_sign_in: ^5.4.3
 
 dev_dependencies:
   flutter_test:
