--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  cloud_firestore: ^4.3.1
-  firebase_core: ^2.4.1
-
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +60,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/images/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
