--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.16
-  responsive_framework: ^0.2.0
   dio: ^4.0.6
+  email_validator: ^2.0.1
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
