--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.todolist">
    <application
         android:label="todolist"
-        android:name="${applicationName}"
+        android:name="ToList App"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
